--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,14 @@
     <head>
         <title>{{title}}</title>
         <meta charset="utf-8"/>
+        <link rel= "stylesheet" type= "text/css" href= "static/styles/base.css">
     </head>
     <!-- Add navigation menu -->
     <body>
-        <nav>
-            <ul>
-                <li><a href="/blog">Blog Homepage</a></li>
-                <li><a href="/newpost">Add a New Post</a></li>
+        <nav style="background-color: grey; padding: 10px">
+            <ul style="list-style: none">
+                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/blog">Blog Homepage</a></li>
+                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/addpost">Add a New Post</a></li>
             </ul>
         </nav>
         {% block content %}
