setup all files with initial TODO's- no changes made to code yet

--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!--TODO - Must be logged in to see this page! -->
     <h1>Add a New Post</h1>
     <form action="/addpost"method='POST' >
         <label>Title <input type="text" name='title' /></label>
