--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
             <ul style="list-style: none">
                 <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/blog">Blog Homepage</a></li>
                 <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/addpost">Add a New Post</a></li>
+                 <!--TODO - Add links for logging in and logging out -->
             </ul>
         </nav>
         {% block content %}
