--- a/templates/post.html
+++ b/templates/post.html
@@ -2,6 +2,7 @@
 {% block content %}
 
     <h1>{{post.title}}</h1>
+    <!--TODO - Also need to display the author's name-->
     <p>{{post.body}}</p>
         
 {% endblock %}
