--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,1 +1,42 @@
 <!--TODO - Add a template for signup form -->
+
+{% extends "base.html" %}
+
+{% block content %}
+<h1>Signup for a user account with Blogz!</h1>
+<form action="/signup" method="post">
+    <table>
+        <tr>
+            <td><label for="email">Email</label></td>
+            <td>
+                <input name="email" type="email" value="{{ email }}">
+            </td>
+        </tr>
+        <tr>
+            <td><label for="first_name">First Name</label></td>
+            <td>
+                <input name="first_name" type="text" value="{{ first_name }}">
+            </td>
+        </tr>
+        <tr>
+            <td><label for="last_name">Last Name</label></td>
+            <td>
+                <input name="last_name" type="text" value="{{ last_name }}">
+            </td>
+        </tr>
+        <tr>
+            <td><label for="password">Password</label></td>
+            <td>
+                <input name="password" type="password">
+            </td>
+        </tr>
+        <tr>
+            <td><label for="verify">Verify Password</label></td>
+            <td>
+                <input name="verify" type="password">
+            </td>
+        </tr>
+    </table>
+    <input type="submit" value="Register">
+</form>
+{% endblock %}
