updated links in main nav menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
     <body>
         <nav style="background-color: grey; padding: 10px">
             <ul style="list-style: none">
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/blog">Blog Homepage</a></li>
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/addpost">Add a New Post</a></li>
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/signup">Blogger Signup</a></li>
+                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/blog">Home</a></li>
+                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/addpost">New Post</a></li>
+                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/signup">Signup</a></li>
                 <!--TODO - Add links for logging in and logging out -->
             </ul>
         </nav>
