--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,31 @@
 <!--TODO - Add a template for logging in -->
+{% extends "base.html" %}
+{% block content %}
+
+<h1>Log In</h1>
+<p>If you don't have an account, you may <a href="/signup">sign up</a> for one</p>
+<form action="/login" method="POST">
+    <table>
+        <tr>
+            <td><label for="email">Email</label></td>
+            <td>
+                <input name="email" type="email" value="{{ email }}">
+            </td>
+            <td>
+                <p class="error">{{email_error}}</p>
+            </td>
+        </tr>
+        <tr>
+            <td><label for="password">Password</label></td>
+            <td>
+                <input name="password" type="password">
+            </td>
+            <td>
+                <p class="error">{{password_error}}</p>
+            </td>
+        </tr>
+    </table>
+    <input type="submit" value="Login">
+</form>
+
+{% endblock %}
