--- a/templates/post.html
+++ b/templates/post.html
@@ -2,6 +2,8 @@
 {% block content %}
 
     <h1>{{post.title}}</h1>
+    <h6>Written by: {{post.owner.first_name}} {{post.owner.last_name}}</h6>
+    <!-- <h6>{{first_name}}{{last_name}}</h6> -->
     <!--TODO - Also need to display the author's name-->
     <p>{{post.body}}</p>
         
