--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,50 +3,48 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Signup for a user account with Blogz!</h1>
 
+<div class="row">
+    <div class="col-xs-10">
+        <h1 class="page-header">Signup with Blogz!</h1>
+    </div>
+</div>
 
-<form action="/signup" method="post">
-    <table>
-        <tr>
-            <td><label for="email">Email</label></td>
-            <td>
-                <input name="email" type="email" value="{{ email }}">
-                {% if error %}
-                    <p><strong>Error:</strong> {{ error }}</p>
-                {% endif %}
-            </td>
-        </tr>
-        <tr>
-            <td><label for="password">Password</label></td>
-            <td>
-                <input name="password" type="password">
-                <span class="error"></span>
-            </td>
-        </tr>
-        <tr>
-            <td><label for="verify">Verify Password</label></td>
-            <td>
-                <input name="verify" type="password">
-                <span class="error"></span>
-            </td>
-        </tr>
-        <tr>
-            <td><label for="first_name">First Name</label></td>
-            <td>
-                <input name="first_name" type="text" value="{{ first_name }}">
-                <span class="error"></span>
-            </td>
-        </tr>
-        <tr>
-            <td><label for="last_name">Last Name</label></td>
-            <td>
-                <input name="last_name" type="text" value="{{ last_name }}">
-                <span class="error"></span>
-            </td>
-        </tr>
+<div class="row">
+    <div class="col-xs-10">
+        <form action="/signup" method="post">
 
-    </table>
-    <input type="submit" value="Register">
-</form>
+            <div class="form-group">    
+                <label for="email">Email</label>
+                <input name="email" type="email" value="{{ email }}" class="form-control" required="required">
+                <p> {{email_error}} </p>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input name="password" type="password" class="form-control" required="required">
+                <p> {{password_error}} </p>
+            </div>
+
+            <div class="form-group">
+                <label for="verify">Verify Password</label>
+                <input name="verify" type="password" class="form-control" required="required">
+                <p> {{password_error}} </p>
+            </div>
+
+            <div class="form-group">
+                <label for="first_name">First Name</label>
+                <input name="first_name" type="text" value="{{ first_name }}" class="form-control" required="required">
+            </div>
+                
+            <div class="form-group">
+                <label for="last_name">Last Name</label>
+                <input name="last_name" type="text" value="{{ last_name }}" class="form-control" required="required">
+            </div>
+    
+            <button type="submit" value="Register" class="btn btn-success">Sign Up</button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
