--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -1,17 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
 <!--TODO - Must be logged in to see this page! -->
-    <h1>Add a New Post</h1>
-    <form action="/addpost"method='POST' >
-        <label>Title <input type="text" name='title' /></label>
-        <br>
-        <br>
-        <label>Body <textarea name='body' style="width: 80%; height: 90px; padding: 1rem"></textarea></label>
-        <br>
-        <br>
-        <p style="color:red">{{error}}</p>
-        <br>
-        <br>
-        <input type="submit" value="Add Post" />
-    </form>
+<div class="row">
+    <div class="col-xs-10">
+        <h1 class="page-header">Add a New Post</h1>
+    </div>
+</div>
+
+<div class="row">
+
+    <div class="col-xs-10">
+        <form action="/addpost"method='POST' >
+
+            <div class="form-group">
+                <label>Title 
+                <input type="text" name='title' class="form-control" required="required"/>
+                </label>
+            </div>
+
+            <div class="form-group">
+                <label>Body 
+                <textarea name='body' rows="10" class="form-control" required="required"></textarea>
+                </label>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-10">
+                    <p style="color:red">{{error}}</p>
+                </div>
+            </div>
+
+            <button type="submit" value="Add Post" class="btn btn-success">Post</button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
