--- a/templates/base.html
+++ b/templates/base.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>{{title}}</title>
+        <title>{{page_title}}</title>
         <meta charset="utf-8"/>
-        <style>
-            .error {
-                color: red;
-                text-decoration: none;
-            }
-        </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
+        <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+
+
     </head>
     <!-- Add navigation menu -->
     <body>
-        <nav style="background-color: grey; padding: 10px">
-            <ul id="nav_menu" style="list-style: none">
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/">Home</a></li>
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/blog">All Posts</a></li>
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/addpost">New Post</a></li>
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/signup">Sign Up</a></li>
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/login">Log In</a></li>
-                <li style="display: inline; padding: 1rem; text-decoration: none; color: white"><a href="/logout">Log Out</a></li>
-                <!--TODO - Add links for logging in and logging out -->
-            </ul>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">Blogz</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+				    <li><a href="/blog">All Posts</a></li>
+                    <li><a href="/addpost">New Post</a></li>
+                    <li><a href="/signup">Sign Up</a></li>
+                    <li><a href="/login">Log In</a></li>
+                    <li><a href="/logout">Logout</a></li>
+                </ul>
+            </div>
         </nav>
-        
-        {% with messages = get_flashed_messages(with_categories=True) %}
-            <ul style="list-style: none">
-            <!-- TODO - Remove list styling!! -->
-            {% for category,message in messages %}
-                <li style="text-decoration: none" class="{{category}}">{{message}}</li>
-            {% endfor %}
-            </ul>
-        {% endwith %}
 
-        {% block content %}
-        {% endblock %}
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-10">
+                    {% with messages = get_flashed_messages(with_categories=True) %}
+                        <ul style="list-style: none">
+                        <!-- TODO - Remove list styling!! -->
+                        {% for category,message in messages %}
+                            <li style="text-decoration: none">{{message}}</li>
+                        {% endfor %}
+                        </ul>
+                    {% endwith %}
+                </div>
+            </div>
+                {% block content %}
+                    <!-- TEMPLATES WILL DISPLAY HERE! -->
+                {% endblock %}
+        </div>
     </body>
 </html>
