--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Blog Writters</h1>
-    
+    <div class="col-xs-10">
+        <h1 class="page-header">Bloggers</h1>
+    </div>
+    <div class="col-xs-10">
         {% for user in users %}
-            <ul>
-                <li><a href="./blog?user_id={{ user.id }}">{{ user.first_name }} {{ user.last_name }}</a></li>
-            </ul>
+            <h4><a href="./blog?user_id={{ user.id }}">{{ user.first_name }} {{ user.last_name }}</a></h4>
         {% endfor %}
+    </div>
    
 {% endblock %}
