--- a/templates/post.html
+++ b/templates/post.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-
-    <h1>{{post.title}}</h1>
-    <h6>Written by: {{post.owner.first_name}} {{post.owner.last_name}}</h6>
-    <!-- <h6>{{first_name}}{{last_name}}</h6> -->
+    <div class="col-xs-10">
+        <h1 class="page-header">{{post.title}}</h1>
+        <h6>Written by: {{post.owner.first_name}} {{post.owner.last_name}}</h6>
+        <!-- <h6>{{first_name}}{{last_name}}</h6> -->
     <!--TODO - Also need to display the author's name-->
-    <p>{{post.body}}</p>
-        
+        <p>{{post.body}}</p>
+    </div>
 {% endblock %}
