--- a/templates/signup.html
+++ b/templates/signup.html
@@ -42,7 +42,7 @@
                 <input name="last_name" type="text" value="{{ last_name }}" class="form-control" required="required">
             </div>
     
-            <button type="submit" value="Register" class="btn btn-success">Sign Up</button>
+            <button type="submit" value="Sign Up" class="btn btn-success">Sign Up</button>
         </form>
     </div>
 </div>
